--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Magic 8 Ball</title>
+    <!-- 
+      =====
+      Made by George Antipin: https://github.com/carbongo
+      Git repository: https://github.com/carbongo/magic-8-ball
+      =====
+    -->
   </head>
   <body>
     <figure class="ball" id="ball">
